# pygobject-cmake

./: CMakeLists.txt  _gi.cmake  _glib.cmake  _gobject.cmake  config.h.cmake
cmake/: FindFFI.cmake  FindGI.cmake  FindGLIB.cmake
gi/: pygi-argument.c  pygi-property.c
gi/_gobject/: pygtype.c
